--- a/utils/style.css
+++ b/utils/style.css
@@ -6,16 +6,16 @@
   --font-family: "Play";
 }
 
-div {
+* {
   font-family: var(--font-family) !important;
 }
 
-span {
-  font-family: var(--font-family) !important;
+h1 {
+  color: var(--primary-color);
 }
 
-text {
-  font-family: var(--font-family) !important;
+h3 {
+  font-weight: 100;
 }
 
 .stMarkdown {
@@ -30,15 +30,13 @@ text {
 
 .fp-prediction-info {
   display: flex;
-  align-items: baseline;
+  align-items: center;
 }
 
-.fp-sample-image-wrapper {
-  overflow: hidden;
-}
-
-.fp-sample-image {
-  filter: blur(5px) grayscale(100%);
+.fp-map-image {
+  width: 110px;
+  height: 55px;
+  background: gray;
 }
 
 .fp-map-name {
@@ -67,6 +65,7 @@ text {
 
 .fp-background-gt {
   background-color: var(--primary-color);
+  flex-basis: 60%;
 }
 
 .fp-stages-container {
@@ -87,6 +86,7 @@ text {
   width: 100%;
   font-family: "Play";
 }
+
 .fp-flex-item {
   display: flex;
   flex-direction: column;
@@ -95,13 +95,16 @@ text {
   border: solid 4px transparent;
   border-radius: 4px;
 }
+
 .fp-selected-item {
   border-color: #fe6300;
 }
+
 .fp-item-logo {
   height: 64px;
   margin: 4px auto;
 }
+
 .fp-item-title {
   color: var(--primary-color);
   font-size: 18px;
@@ -109,16 +112,19 @@ text {
   text-align: center;
   padding-bottom: 8px;
 }
+
 .fp-item-description {
   color: var(--text-color);
   font-size: 14px;
 }
+
 .arrow_box {
   height: 4px;
   margin: 18px 32px;
   position: relative;
   background: linear-gradient(90deg, gray 20%, var(--primary-color) 80%);
 }
+
 .arrow_box:before {
   left: 100%;
   top: 50%;
@@ -127,8 +133,15 @@ text {
   position: absolute;
   pointer-events: none;
 }
+
 .arrow_box:before {
   border-left-color: var(--primary-color);
   border-width: 12px;
   margin-top: -12px;
+}
+
+.fp-hr {
+  height: 4px;
+  border: none;
+  background-color: #333;
 }
